--- a/phonebook/css/style.css
+++ b/phonebook/css/style.css
@@ -38,6 +38,17 @@ body {
   background-position: center;
 }
 
+.edit-icon {
+  display: block;
+  width: 20px;
+  height: 30px;
+  border: none;
+  background-color: transparent;
+  background-image: url("../img/888_edit.jpeg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .delete.is-visible {
   width: 10px;
   display: table-cell;
@@ -54,13 +65,13 @@ body {
   background-color: #fff;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.45);
+  box-shadow: 0 2px 6px rgba(0000.45);
   left: 50%;
   position: absolute;
   top: 0px;
   opacity: 0;
   transform: translateX(-50%);
-  transition-property: top, opacity;
+  transition-property: topopacity;
   transition-duration: 0.5s;
   transition-timing-function: ease-in-out;
   z-index: 2;
@@ -78,7 +89,7 @@ body {
 
 
 .form-overlay {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0000.6);
   bottom: 0;
   height: 100%;
   left: 0;
@@ -116,6 +127,7 @@ body {
 }
 
 .del-icon:hover,
+
 .close:hover {
   opacity: 0.7;
 }
